--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <section id="cta">
 <h2>Next steps: learn, compare, and practice safely</h2>
-<p>Now that you understand the key features that make pilates socks effective, you can evaluate options with confidence. Start by assessing your primary practice environment—mat, reformer, or both—and consider which grip pattern and coverage style will best support your movements. Think about your comfort preferences regarding cushioning and fabric, and factor in how often you'll practice when budgeting for multiple pairs.</p>
+<p>Now that you understand the key features that make pilates socks effective, you can evaluate options with confidence. Start by assessing your primary practice environment—mat, reformer, or both—and consider which grip pattern and coverage style will best support your movements. For more details, visit the <a href="https://spinrise1.ca/">Spinrise Casino Login</a> page. Think about your comfort preferences regarding cushioning and fabric, and factor in how often you'll practice when budgeting for multiple pairs.</p>
 <p>If you have specific questions about grip performance, sizing, or replacement timing, visit our <a href="/faq">Pilates socks FAQ</a> for detailed answers to common concerns. To learn more about how we evaluate sock features and our approach to providing neutral, international guidance, read <a href="/about-us">about Pilates Socks</a> and our editorial standards. Whichever socks you choose, prioritize proper fit, adequate grip, and regular replacement to support safe, effective practice.</p>
 </section>
 
